--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#responsive">Responsive Redesign</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reflection">Responsive Redesign</a>
+            </li>
           </ul>
         </div>
       </div>
