--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="#responsive">Responsive Redesign</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#reflection">Responsive Redesign</a>
+              <a class="nav-link" href="#reflection">Takeaways</a>
             </li>
           </ul>
         </div>
